--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "styled-components": "^3.2.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "FORCE_COLOR=true react-scripts start | cat ",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
