--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "setup": "yarn install && cd client && yarn install",
+    "start-server": "node index",
+    "start-client": "cd client && yarn start",
+    "start": "npm-run-all --parallel start-server start-client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Franck Achkouyan <https://twitter.com/a_franck>",
@@ -22,6 +25,7 @@
     "async": "2.6.0",
     "dotenv": "5.0.1",
     "graphql-type-json": "0.2.0",
-    "graphql-yoga": "1.7.0"
+    "graphql-yoga": "1.7.0",
+    "yarn-run-all": "3.1.1"
   }
 }
