allow api endpoint .env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 GCP_PROJECT_ID=""
+GCP_API_ENDPOINT=""
 GCP_PRIVATE_KEY=""
 GCP_CLIENT_EMAIL=""
-GCP_SUBSCRIPTION_DEBUGGER_KEY="my_nickname"
+GCP_SUBSCRIPTION_DEBUGGER_KEY="my-nickname"
